Add XML parser example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ link_directories(${GTKMM_LIBRARY_DIRS})
 
 include_directories(${GTKMM_INCLUDE_DIRS})
 set(SOURCE_FILES
-        src/main.cpp src/GameWindow.cpp src/GameWindow.h)
+        src/main.cpp src/GameWindow.cpp src/GameWindow.h
+        src/xml/pugixml.cpp src/xml/pugiconfig.hpp src/xml/pugixml.hpp)
 
 add_executable(Z_TPGrupal ${SOURCE_FILES})
 
