--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,16 @@ pkg_check_modules(GTKMM gtkmm-3.0)
 link_directories(${GTKMM_LIBRARY_DIRS})
 include_directories(${GTKMM_INCLUDE_DIRS})
 
-set(SDL2_INCLUDE_DIR  /usr/include/SDL2 )
-set(SDL2_LIBRARY /usr/lib/libSDL2.so)
-include_directories(${SDL2_INCLUDE_DIR})
-include_directories(/usr/local/include/SDL2/SDL2_mixer)
 
-add_compile_options(-l SDL_mixer)
+pkg_check_modules(SDL2 sdl2)
+include_directories(${SDL2_LIBRARY_DIRS})
+include_directories(${SDL2_INCLUDE_DIRS})
+
+pkg_check_modules(SDL2_mixer SDL2_mixer)
+link_directories(${SDL2_mixer_LIBRARY_DIRS})
+include_directories(${SDL2_mixer_INCLUDE_DIRS})
+
+add_compile_options(${SDL2_mixer_LDFLAGS} ${SDL2_mixer_CFLAGS})
 
 set(SOURCE_FILES
         src/main.cpp src/GameWindow.cpp src/GameWindow.h
@@ -24,4 +28,5 @@ add_executable(Z_TPGrupal ${SOURCE_FILES})
 
 target_link_libraries(Z_TPGrupal
         ${GTKMM_LIBRARIES}
-        ${SDL_LIBRARY})
+        ${SDL_LIBRARY}
+        ${SDL2_mixer_LIBRARIES})
