--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,27 @@
-cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.5)
 project(Z_TPGrupal)
 
 set(CMAKE_CXX_STANDARD 11)
+
+set(LIBS_DIR libs)
+set(PUGI ${LIBS_DIR}/xml)
+
+find_package(PkgConfig)
+
+pkg_check_modules(GTKMM gtkmm-3.0)
+pkg_check_modules(SDL2 sdl2)
+pkg_check_modules(SDL2_mixer SDL2_mixer)
+
+link_directories(
+        ${SDL2_mixer_LIBRARY_DIRS}
+        ${GTKMM_LIBRARY_DIRS})
+
+include_directories(
+        ${PUGI}
+        ${GTKMM_INCLUDE_DIRS}
+        ${SDL2_LIBRARY_DIRS}
+        ${SDL2_INCLUDE_DIRS}
+        ${SDL2_mixer_INCLUDE_DIRS})
 
 set(SOURCE_FILES
         libs/xml/pugiconfig.hpp
@@ -43,4 +63,14 @@ set(SOURCE_FILES
         src/Thread.cpp
         src/Thread.h)
 
+add_compile_options(${SDL2_mixer_LDFLAGS} ${SDL2_mixer_CFLAGS})
 add_executable(Z_TPGrupal ${SOURCE_FILES})
+
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
+target_link_libraries(Z_TPGrupal
+        ${GTKMM_LIBRARIES}
+        ${SDL_LIBRARY}
+        ${SDL2_mixer_LIBRARIES}
+        Threads::Threads)
