--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -62,14 +62,12 @@ set(SOURCE_FILES
         MapMonitor.h
         Player.cpp
         Player.h
-        PlayersMonitor.cpp
-        PlayersMonitor.h
         Unit.cpp
         Unit.h ServerMessenger.cpp ServerMessenger.h
         commands/Command.h
         commands/AddUnit.cpp
         commands/AddUnit.h commands/RemoveUnit.cpp commands/RemoveUnit.h
-        commands/UpdatePosition.cpp commands/UpdatePosition.h enums/FlagEnum.h enums/TeamEnum.h enums/ActionsEnum.h enums/UnitsEnum.h enums/BuildingsEnum.h commands/LoadMap.cpp commands/LoadMap.h enums/RotationsEnum.h  windows/InitialWindow.cpp windows/InitialWindow.h)
+        commands/UpdatePosition.cpp commands/UpdatePosition.h enums/FlagEnum.h enums/TeamEnum.h enums/ActionsEnum.h enums/UnitsEnum.h enums/BuildingsEnum.h commands/LoadMap.cpp commands/LoadMap.h enums/RotationsEnum.h  windows/InitialWindow.cpp windows/InitialWindow.h Counter.cpp Counter.h UnitsMonitor.cpp UnitsMonitor.h)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 add_compile_options(${SDL2_mixer_LDFLAGS} ${SDL2_mixer_CFLAGS})
