--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -39,8 +39,8 @@ set(SOURCE_FILES
         Armament.h
         Building.cpp
         Building.h
-        BuildingPanel.cpp
-        BuildingPanel.h
+        panels/BuildingPanel.cpp
+        panels/BuildingPanel.h
         BuildingsMonitor.cpp
         BuildingsMonitor.h
         Camera.cpp
@@ -67,7 +67,7 @@ set(SOURCE_FILES
         commands/Command.h
         commands/AddUnit.cpp
         commands/AddUnit.h commands/RemoveUnit.cpp commands/RemoveUnit.h
-        commands/UpdatePosition.cpp commands/UpdatePosition.h enums/FlagEnum.h enums/TeamEnum.h enums/ActionsEnum.h enums/UnitsEnum.h enums/BuildingsEnum.h commands/LoadMap.cpp commands/LoadMap.h enums/RotationsEnum.h  windows/InitialWindow.cpp windows/InitialWindow.h Counter.cpp Counter.h UnitsMonitor.cpp UnitsMonitor.h)
+        commands/UpdatePosition.cpp commands/UpdatePosition.h enums/FlagEnum.h enums/TeamEnum.h enums/ActionsEnum.h enums/UnitsEnum.h enums/BuildingsEnum.h commands/LoadMap.cpp commands/LoadMap.h enums/RotationsEnum.h  windows/InitialWindow.cpp windows/InitialWindow.h Counter.cpp Counter.h UnitsMonitor.cpp UnitsMonitor.h panels/UnitPanel.cpp panels/UnitPanel.h)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 add_compile_options(${SDL2_mixer_LDFLAGS} ${SDL2_mixer_CFLAGS})
