agrego clases para test

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -15,7 +15,8 @@ set(COMMON_FILES
         Thread.cpp
         Thread.h
         split.cpp
-        split.h)
+        split.h
+        ../../test/clientReceiverTest.cpp ../../test/clientReceiverTest.h)
 
 set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
